Day-9-Ingress/argocd-ingress.yaml
#1 - editar nginx ingress-nginx-controller
# adicionar em args:- --enable-ssl-passthrough



#2- editar deploy argocd-server
#spec:
#  template:
#    spec:
#      containers:
#      - name: argocd-server
#         command:
#        - argocd-server
#        - --insecure
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.williamuller.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
  - hosts:
    - argocd.williamuller.io
    secretName: argocd-secret
