Day-9-Ingress/ingress-4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: giropops-senhas.williamuller.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-giropops-senhas
            port:
              number: 5000
